# financial-rust

./: Cargo.toml  README.md  test_error
comparer/: Cargo.toml  README.md
comparer/src/: main.rs
converter/: Cargo.toml  README.md
converter/src/: main.rs
examples/: transactions.csv  transactions.txt
parser/: Cargo.toml  README.md
parser/src/: domain.rs  error.rs  lib.rs
parser/src/formats/: binary.rs  csv.rs  mod.rs  text.rs
