[package]
name = "comparer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for comparing two financial transaction files across formats"

[[bin]]
name = "ypbank_compare"
path = "src/main.rs"

[dependencies]
parser = { path = "../parser", features = ["cli"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
