[package]
name = "converter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for converting financial transaction files between CSV, text and binary formats"

[[bin]]
name = "ypbank_converter"
path = "src/main.rs"

[dependencies]
parser = { path = "../parser", features = ["cli"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
