[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rust_decimal = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"], optional = true }
strum = { version = "0.26", features = ["derive"] }

[features]
default = []
cli = ["clap"]
