[package]
name = "parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Financial transaction parser library: CSV, plain-text and custom binary formats"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rust_decimal = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"], optional = true }
strum = { version = "0.26", features = ["derive"] }

[features]
default = []
cli = ["clap"]
